<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ApplicantActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_top" >

        <TextView
            android:id="@+id/textView1"
            style="@style/caption_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/caption_applicant"
            android:textSize="@dimen/caption" />
        
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/llResume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView4"
                    style="@style/title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_info"
                    android:textSize="@dimen/title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView2"
                    style="@style/text_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name"
                    android:textSize="@dimen/text" />

                <EditText
                    android:id="@+id/etFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textCapWords"
                    android:textSize="@dimen/text" />

                <TextView
                    android:id="@+id/textView3"
                    style="@style/text_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthdate"
                    android:textSize="@dimen/text" />

                <TextView
                    android:id="@+id/tvBirthdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showDateDialog"
                    android:clickable="true"
                    android:text="@string/empty_birthdate"
                    android:textSize="@dimen/text" />

                <TextView
                    android:id="@+id/TextView01"
                    style="@style/text_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/sex"
                    android:textSize="@dimen/text" />

                <Spinner
                    android:id="@+id/spSex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job"
                    android:textSize="@dimen/title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TextView02"
                    style="@style/text_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/position"
                    android:textSize="@dimen/text" />

                <EditText
                    android:id="@+id/etPosition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textCapSentences"
                    android:textSize="@dimen/text" />

                <TextView
                    android:id="@+id/TextView03"
                    style="@style/text_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/salary"
                    android:textSize="@dimen/text" />

                <EditText
                    android:id="@+id/etSalary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:textSize="@dimen/text" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contacts"
                    android:textSize="@dimen/title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TextView04"
                    style="@style/text_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/phone"
                    android:textSize="@dimen/text" />

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone"
                    android:textSize="@dimen/text" />

                <TextView
                    android:id="@+id/TextView05"
                    style="@style/text_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/email"
                    android:textSize="@dimen/text" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textWebEmailAddress"
                    android:textSize="@dimen/text" />

                <LinearLayout
                    android:id="@+id/llEmptyField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/tvEmptyFieldsCaption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tvEmptyFields"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dip"
                    android:paddingTop="10dip" >

                    <Button
                        android:id="@+id/btnSendResume"
                        style="@style/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/button"
                        android:onClick="sendResume"
                        android:text="@string/send_resume"/>

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llReply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reply_by_employer"
                    style="@style/title_text"
                    android:textSize="@dimen/title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvReply"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>
    
</LinearLayout>